--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,69 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url('https://fonts.googleapis.com/css?family=Courgette&display=swap');
+
+.bg-image {
+  position: relative;
+  background: linear-gradient(rgba(8, 8, 8, 0.3), rgba(8, 8, 8, 0.3)), url('/images/homeBcg.jpeg');
+  background-size: cover !important;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
+.bg-default-image {
+  position: relative;
+  background: linear-gradient(rgba(8, 8, 8, 0.3), rgba(8, 8, 8, 0.3)), url('/images/defaultBcg.jpeg');
+  background-size: cover !important;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
+.text-content {
   text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.header-title {
+  text-transform: uppercase;
+  font-family: 'Courgette', cursive;
+  letter-spacing: 1rem;
+  color: white;
+  font-size: 5rem;
+  margin-bottom: 2rem;
+
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sub-text {
+  text-transform: uppercase;
+  color: white;
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.search-box {
+  padding-top: 5rem !important;
+  padding-bottom: 2rem !important;
 }
 
-.card {
-  padding: 2em;
+.search-heading {
+  font-family: 'Courgette', cursive;
+  font-size: 2.3rem;
+  margin-bottom: 1rem;
 }
 
-.read-the-docs {
-  color: #888;
+.text-cursive {
+  font-family: 'Courgette', cursive !important;
+}
+
+.detailPageContent {
+  padding-top: 6rem !important;
+}
+
+.txt-yellow {
+  font-size: 1.2rem;
+  color: rgb(182, 152, 17)
 }
